--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -10,6 +10,6 @@
     <p>私は専門学生時代にピアノを始めました<br>
     現在は駅でピアノを弾いて、趣味のピアノを楽しんでいます。</p>
     <img src="../images/sample.jpg" alt="ピアノの画像"><br>
-    <a href="#">私のプロフィールはこちら</a>
+    <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
