--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -31,14 +31,14 @@
           <input type="text" placeholder="名前を入力してください。"><br>
           <label>年代</label>
           <select>
-            <option value="">10代以下</option>
-            <option value="">20代</option>
-            <option value="">30代</option>
-            <option value="">40代</option>
+            <option value=">10代以下">10代以下</option>
+            <option value="20代">20代</option>
+            <option value="30代">30代</option>
+            <option value=">40代">40代</option>
           </select><br>
-          <label>男性</label><input type="radio">
-          <label>女性</label><input type="radio">
-          <label>その他</label><input type="radio"><br>
+          <label>男性</label><input type="radio"　name"sex">
+          <label>女性</label><input type="radio" name"sex">
+          <label>その他</label><input type="radio" name"sex"><br>
           <label>おすすめ和菓子の名称</label>
           <input type="text" placeholder="例：みたらし団子"><br>
           <label for="">おすすめする理由</label>
